<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.academiamoviles.practicandomockup.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"/>

        <!-- NOMBRES -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/nombres_completos"
            android:textColor="@android:color/black"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/et_nombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>


        <!-- EDAD -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/edad"
            android:textColor="@android:color/black"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/et_edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"/>


        <!-- EMAIL -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textColor="@android:color/black"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>


        <!-- PASSWORD -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/password"
            android:textColor="@android:color/black"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>


        <!-- OTHERS -->
        <CheckBox
            android:id="@+id/cb_terminos_condiciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acepto_terminos_condiciones"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/u_leer_mas"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"/>


        <!-- BUTTON -->
        <Button
            android:id="@+id/btn_registrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/registrate"
            android:textAllCaps="false"/>

    </LinearLayout>

</ScrollView>
